# gust

./: .gitignore  LICENSE  README.md  gust.py  main.py  pyproject.toml  requirements.txt  spotify-autotagger.py
gust/: api_spotify.py  cli.py  config.py  main.py  tagging.py  utils.py
tests/: test_parser.py
